--- a/package.json
+++ b/package.json
@@ -13,19 +13,20 @@
     "js-cookie": "^3.0.5",
     "next": "13.5.6",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "react-hot-toast": "^2.5.2"
   },
   "devDependencies": {
     "@types/js-cookie": "^3.0.6",
-    "next": "13.5.6",
-    "react": "^18",
-    "react-dom": "^18",
-    "tailwind-merge": "^3.0.2",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "autoprefixer": "^10",
+    "next": "13.5.6",
     "postcss": "^8",
+    "react": "^18",
+    "react-dom": "^18",
+    "tailwind-merge": "^3.0.2",
     "tailwindcss": "^3",
     "typescript": "^5"
   }
