--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "next": "13.5.6",
     "react": "^18",
     "react-dom": "^18",
-    "react-toastify": "^11.0.5"
+    "react-toastify": "^11.0.5",
+    "zod": "^3.24.2"
   },
   "devDependencies": {
     "@types/js-cookie": "^3.0.6",
