--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "next": "13.5.6",
     "react": "^18",
     "react-dom": "^18",
-    "zod": "^3.24.2"
+    "zod": "^3.24.2",
     "react-hot-toast": "^2.5.2",
     "react-toastify": "^11.0.5"
   },
