--- a/package.json
+++ b/package.json
@@ -10,16 +10,23 @@
   },
   "dependencies": {
     "axios": "^1.8.4",
+    "file-saver": "^2.0.5",
     "js-cookie": "^3.0.5",
+    "json2csv": "^6.0.0-alpha.2",
+    "jszip": "^3.10.1",
     "next": "13.5.6",
+    "papaparse": "^5.5.2",
     "react": "^18",
     "react-dom": "^18",
     "react-hot-toast": "^2.5.2",
     "react-toastify": "^11.0.5"
   },
   "devDependencies": {
+    "@types/file-saver": "^2.0.7",
     "@types/js-cookie": "^3.0.6",
+    "@types/json2csv": "^5.0.7",
     "@types/node": "^20",
+    "@types/papaparse": "^5.3.15",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "autoprefixer": "^10",
