--- a/package.json
+++ b/package.json
@@ -9,8 +9,10 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@nextui-org/react": "^2.6.11",
     "axios": "^1.8.4",
     "file-saver": "^2.0.5",
+    "framer-motion": "^12.5.0",
     "js-cookie": "^3.0.5",
     "json2csv": "^6.0.0-alpha.2",
     "jszip": "^3.10.1",
