--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@nextui-org/react": "^2.6.11",
+    "@vercel/analytics": "^1.5.0",
     "axios": "^1.8.4",
     "file-saver": "^2.0.5",
     "framer-motion": "^12.5.0",
