--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "js-cookie": "^3.0.5",
     "json2csv": "^6.0.0-alpha.2",
     "jszip": "^3.10.1",
+    "jwt-decode": "^4.0.0",
     "next": "13.5.6",
     "papaparse": "^5.5.2",
     "react": "^18",
